[gd_scene load_steps=15 format=3 uid="uid://iosc17jma51k"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_fc1m7"]
[ext_resource type="Texture2D" uid="uid://d23jlntk3kgxp" path="res://assets/UI/Arrow.png" id="2_cw6uy"]
[ext_resource type="AudioStream" uid="uid://dpjyhmxoa1qh5" path="res://sounds/MUS_1.ogg" id="4_ewxbt"]
[ext_resource type="AudioStream" uid="uid://cfgof6jfllj37" path="res://sounds/UI_Arrow.wav" id="5_1ep5v"]
[ext_resource type="AudioStream" uid="uid://dai8wwpv6umpn" path="res://sounds/UI_Typing.wav" id="5_a6wd8"]
[ext_resource type="FontFile" uid="uid://chhjx2uirpf3r" path="res://assets/UI/Quicksand-Bold.otf" id="5_dh7dy"]
[ext_resource type="AudioStream" uid="uid://667owapmjk4c" path="res://sounds/MUS_TRANS_1TO2.ogg" id="5_kgie0"]
[ext_resource type="AudioStream" uid="uid://uiyrt5gx412b" path="res://sounds/MUS_2.ogg" id="6_rxk6h"]
[ext_resource type="AudioStream" uid="uid://q1lha6nklqno" path="res://sounds/UI_Enter.wav" id="7_fhamf"]
[ext_resource type="AudioStream" uid="uid://r0kwwp3foqdi" path="res://sounds/MUS_TRANS_2TO3.ogg" id="7_fjiv2"]
[ext_resource type="AudioStream" uid="uid://bpl8mfur8amnk" path="res://sounds/MUS_3.ogg" id="8_stic6"]
[ext_resource type="Script" path="res://scripts/audio_stream_player_music.gd" id="9_opqji"]

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_1ww8b"]
clip_count = 5
clip_0/name = &"Mus 1"
clip_0/stream = ExtResource("4_ewxbt")
clip_0/auto_advance = 0
clip_1/name = &"Trans 1 to 2"
clip_1/stream = ExtResource("5_kgie0")
clip_1/auto_advance = 1
clip_1/next_clip = 2
clip_2/name = &"Mus 2"
clip_2/stream = ExtResource("6_rxk6h")
clip_2/auto_advance = 0
clip_3/name = &"Trans 2 to 3"
clip_3/stream = ExtResource("7_fjiv2")
clip_3/auto_advance = 1
clip_3/next_clip = 4
clip_4/name = &"Mus 3"
clip_4/stream = ExtResource("8_stic6")
clip_4/auto_advance = 0
_transitions = {
Vector2i(0, 1): {
"fade_beats": 1,
"fade_mode": 4,
"from_time": 1,
"to_time": 1
},
Vector2i(1, 2): {
"fade_beats": 1,
"fade_mode": 4,
"from_time": 3,
"to_time": 1
},
Vector2i(2, 3): {
"fade_beats": 1,
"fade_mode": 4,
"from_time": 1,
"to_time": 1
},
Vector2i(3, 4): {
"fade_beats": 1,
"fade_mode": 4,
"from_time": 3,
"to_time": 1
},
Vector2i(4, 1): {
"fade_beats": 4,
"fade_mode": 4,
"from_time": 1,
"to_time": 1
}
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tlmvn"]
streams_count = 1
stream_0/stream = ExtResource("5_a6wd8")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fc1m7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -25.0
offset_right = 145.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Identity" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="LineEdit" parent="VBoxContainer/Identity"]
layout_mode = 2
theme_override_constants/minimum_character_width = 12
theme_override_fonts/font = ExtResource("5_dh7dy")
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter your name..."

[node name="Previous" type="TextureButton" parent="VBoxContainer/Identity"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("2_cw6uy")
stretch_mode = 0

[node name="Skin" type="TextureRect" parent="VBoxContainer/Identity"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Next" type="TextureButton" parent="VBoxContainer/Identity"]
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("2_cw6uy")
stretch_mode = 0
flip_h = true

[node name="Error" type="Label" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.435294, 0.294118, 1)
theme_override_fonts/font = ExtResource("5_dh7dy")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
autowrap_mode = 2

[node name="Connection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Host" type="LineEdit" parent="VBoxContainer/Connection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_dh7dy")
theme_override_font_sizes/font_size = 32
placeholder_text = "Host..."

[node name="Port" type="LineEdit" parent="VBoxContainer/Connection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_dh7dy")
theme_override_font_sizes/font_size = 32
placeholder_text = "Port..."

[node name="Join" type="Button" parent="VBoxContainer/Connection"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_dh7dy")
theme_override_font_sizes/font_size = 32
text = "Join"

[node name="AudioStreamPlayer Music" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamInteractive_1ww8b")
autoplay = true
bus = &"Music"
script = ExtResource("9_opqji")

[node name="UI Audio" type="Node" parent="."]

[node name="AudioStreamPlayer Arrow Click" type="AudioStreamPlayer" parent="UI Audio"]
stream = ExtResource("5_1ep5v")

[node name="AudioStreamPlayer Typing" type="AudioStreamPlayer" parent="UI Audio"]
stream = SubResource("AudioStreamRandomizer_tlmvn")

[node name="AudioStreamPlayer Join Click" type="AudioStreamPlayer" parent="UI Audio"]
stream = ExtResource("7_fhamf")

[connection signal="text_changed" from="VBoxContainer/Identity/Name" to="." method="_on_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/Identity/Name" to="." method="_on_text_submitted"]
[connection signal="pressed" from="VBoxContainer/Identity/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="VBoxContainer/Identity/Next" to="." method="_on_next_pressed"]
[connection signal="text_changed" from="VBoxContainer/Connection/Host" to="." method="_on_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/Connection/Host" to="." method="_on_text_submitted"]
[connection signal="text_changed" from="VBoxContainer/Connection/Port" to="." method="_on_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/Connection/Port" to="." method="_on_text_submitted"]
[connection signal="pressed" from="VBoxContainer/Connection/Join" to="." method="_on_join_pressed"]
